fix: ensure text visible during webfont load (#109)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,7 +12,7 @@
 @font-face {
   font-family: "Inter var";
   font-weight: 100 900;
-  font-display: block;
+  font-display: swap;
   font-style: normal;
   src: url("/fonts/Inter-roman.var.woff2") format("woff2");
 }
@@ -20,6 +20,7 @@
 @font-face {
   font-family: "Fira Code VF";
   font-weight: 300 700;
+  font-display: swap;
   font-style: normal;
   src:
     url("/fonts/FiraCode-VF.woff2") format("woff2-variations"),
